Fixing style issues with header div cutting off entities #80

--- a/restoWeb/src/client/scss/manage-list.scss
+++ b/restoWeb/src/client/scss/manage-list.scss
@@ -3,17 +3,17 @@
     height: 100%;
     position: absolute;
     min-width: 90%;
-    overflow-x: hidden;  
+    overflow-x: hidden;
 }
 
 .manage-header {
-//    background-color: #cae4e4; 
-    padding: 40px 30px 5px;
+//    background-color: #cae4e4;
+    padding: 30px 30px 5px;
     position: fixed;
     background-color: #f3f3f3;
     width: 84.5%;
     z-index: 3;
-    
+
     h4 {
       margin-top: 20px;
       margin-bottom: 20px;
