--- a/restoWeb/src/client/scss/restaurant.scss
+++ b/restoWeb/src/client/scss/restaurant.scss
@@ -8,7 +8,7 @@
 
 .manage-header {
 //    background-color: #cae4e4;
-    padding: 40px 30px 5px;
+    padding: 30px 30px 5px;
     position: fixed;
     background-color: #f3f3f3;
     width: 84.5%;
